# rust-bootcamp-workspace

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
chatapp/: README.md  pnpm-lock.yaml
chatapp/src-tauri/: Cargo.toml  tauri.conf.json
client-apps/: .gitignore  Cargo.toml  cliff.toml  readme.md  test.rest
client-apps/hackernews/: Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
client-apps/hackernews/assets/: tailwind.css  tailwind.css.br
client-apps/hackernews/htmls/: index.html  send.html  story_item.html
client-apps/hackernews/src/: lib.rs
client-apps/hackernews/src/story/: api.rs  comment.rs  item.rs  mod.rs  page.rs
client-apps/hackernews/src/ui/: mod.rs  stories.rs  story_comment.rs  story_item.rs
client-apps/src-tauri/: Cargo.toml  tauri.conf.json
client-apps/src-tauri/src/: lib.rs  main.rs  utils.rs
client-apps/src-tauri/src/commands/: mod.rs
concurrency/: .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml
concurrency/examples/: atomic_metrics.rs  concurrency_metrics.rs  dummy_redis.rs
concurrency/src/: lib.rs  main.rs  matrix.rs  vector.rs
concurrency/src/metrics/: atomic_map.rs  concurrency_map.rs  mod.rs
ecosystem/: Cargo.toml  Readme.md  test.rest
ecosystem/examples/: axum_tracing.rs  bytes.rs  derive_builder.rs  derive_more.rs  derive_serde.rs  derive_strum.rs  shortener.rs  tokio_channel.rs  tokio_chat.rs  tokio_nginx.rs  tokio_runtime.rs  user_serde.rs
ecosystem/src/: error.rs  main.rs
grammar/: Cargo.toml
grammar/examples/: parse_json.rs
grammar/src/parser/: nginx_log.rs  pjson.rs
grammar/tests/: pest_json_test.rs
macros/: Cargo.toml  cliff.toml
macros/examples/: auto_debug.rs  auto_deref.rs  enum_macro.rs  enum_macro_darling.rs  my_vec.rs
macros/src/: auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs
rchat/: .env  Cargo.toml  README.md  cliff.toml
rchat/chat_core/: Cargo.toml
rchat/chat_core/src/: error.rs  lib.rs
rchat/chat_server/: Cargo.toml  app.yml  test.rest
rchat/chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
rchat/chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openai.rs
rchat/chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
rchat/chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
rchat/chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
rchat/chat_server/src/utils/: jwt.rs  mod.rs
rchat/dev_tools/: Cargo.toml  readme.md
rchat/dev_tools/src/: main.rs
rchat/migrations/: 20240811150236_initial.sql  20250510115743_users.sql  20250510115852_chats.sql  20250510115856_messages.sql  20250510121154_workspace.sql  20250510121706_add_workspace_id.sql  20250510121706_add_workspace_id_to_users.sql  20250510125041_insert_dummy_data.sql  20250922005708_triggers.sql
rchat/notify_server/: Cargo.toml  index.html  readme.md
rchat/notify_server/src/: lib.rs  main.rs  sse.rs
rchat/scripts/: signin.http
rcli/: Cargo.toml
rcli/fixtures/: blake3.txt  ed25519.pk  ed25519.sk  urlsafe_base64.txt
rcli/src/: lib.rs  main.rs  utils.rs
rcli/src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs  text.rs
rcli/src/process/: base64.rs  csv_convert.rs  gen_pass.rs  mod.rs  text.rs
rcli/tests/: test_password.rs
rdata/: Cargo.toml  README.md  cliff.toml
rdata/assets/: users.ndjson
rdata/examples/: arrow-serde.rs  ndjson.rs  parquet.rs  repl.rs
rdata/notebooks/rdata/: README.md  pyproject.toml  rdata.ipynb
rdata/notebooks/rdata/src/rdata/: __init__.py
rdata/src/: lib.rs
rdata/src/backend/fusion/: describe.rs
rdata/src/cli/: command.rs  connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
rdata/src/ctx/: mod.rs  repl.rs
scripts/: user.sh
simple-redis/: Cargo.toml
simple-redis/src/resp/: encode.rs  frame.rs  mod.rs
