[package]
name = "ecosystem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.19"
