[package]
name = "macros"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.74"

[dev-dependencies]
