[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.38"
