[workspace]
members = ["chat_server", "dev_tools", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "query", "tracing", "multipart", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = { version = "0.3.31" }
tokio-stream = { version = "0.1.17" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
jwt-simple = { version = "0.12.12" }
argon2 = { version = "0.5.3", features = ["std"] }
uuid = { version = "1.16.0", features = ["v7"] }
sha1 = { version = "0.10.6"}
hex = { version = "0.4.3" }
