[package]
name = "chatapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["ohmycloudy@gmail.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.0", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

