[package]
name = "hn"
version = "0.1.0"
description = "Hacker News Cli"
authors = ["ohmycloud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hackernews_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = { version = "2.2.2", features = ["colored"] }
tauri-plugin-window-state = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
anyhow = { version = "1.0.96" }
tracing = { version = "0.1.41", features = ["log"] }
dirs = "6.0.0"
