[package]
name = "rchat"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = { version = "0.5.3", features = ["std"] }
jwt-simple = "0.12.9"
serde_json = "1.0.140"

[dev-dependencies]
http-body-util = "0.1.3"
sqlx-db-tester = "0.6.0"
