[package]
name = "dev_tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "db-helper"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { workspace = true, features = ["postgres", "runtime-async-std-native-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
