[project]
name = "rdata"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ohmycloud", email = "ohmycloudy@gmail.com" }
]
dependencies = [
    "pyarrow>=17.0.0",
    "jupyterlab>=4.2.5",
    "polars>=1.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rdata"]
